# python_study

./: .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE_ASSESSMENT.md  CODE_REVIEW_ANALYSIS.md  DATABASE_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  GENERALIZATION_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_SUMMARY.md  PYTEST_DIAGNOSTIC_REPORT.md  QUICK_FIX.md  TEST_FIXES_NEEDED.md  check_redis.py  diagnose_issue.py  graph.ipynb  langgraph_orag.ipynb  memory.ipynb  pyproject.toml  pytest.ini  react_agent.ipynb  react_agent_test.py  requirements-test.txt  test.md
.github/workflows/: ci.yml
api/: .env.example  API_EXAMPLES.md  ARCHITECTURE.md  Dockerfile  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  alembic.ini  config.py  dependencies.py  docker-compose.yml  main.py  requirements.txt  run.sh  versioning.py
api/alembic/: README.md  env.py
api/crud/: __init__.py  user.py
api/database/: __init__.py  models.py  session.py
api/middleware/: __init__.py  logging.py  rate_limit.py  security.py
api/models/: __init__.py  common.py  requests.py  responses.py  user.py
api/routers/: __init__.py  auth.py  chat.py  collections.py  documents.py  health.py  search.py  users.py
api/scripts/: __init__.py  init_db.py
api/security/: __init__.py  auth.py  jwt.py  tls.py
api/services/: __init__.py  document_service.py  search_service.py
api/tests/: test_api.py
api/utils/: __init__.py  pagination.py
core/: __init__.py  config.py  container.py
doc/loader/: doc_loader.py
doc/spliter/: md_splitter.py
doc/vstore/: qdrant_vector_store_client.py  vstore_main.py
graph/func/: graph_func.py
graph/node/: graph_main.py
graph/prompt/: prompt.py
graph/state/: graph_state.py
llm/: base.py  llm_main.py  qwen.py
llm/providers/: __init__.py  qwen.py  registry.py
notebook/: langgraph_memory.ipynb  langgraph_orag.ipynb
notebook/ocr_research/: __init__.py  report.md
ocr_research/: README.md  main.py
scripts/: check-services.sh
tests/: conftest.py  test_config.py  test_container.py  test_doc_loader.py  test_llm_registry.py  test_md_splitter.py  test_vstore_main.py
tools/: udf_tools.py
web/: .env.example  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLES.md  PROJECT_FILES.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  SUMMARY.md  USER_MANAGEMENT_README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/coverage/: coverage-final.json  index.html
web/coverage/web/: .eslintrc.cjs.html  index.html
web/coverage/web/src/: App.tsx.html  index.html  main.tsx.html
web/coverage/web/src/hooks/: index.html  useAuth.ts.html  useDocuments.ts.html  usePermissions.ts.html  useSearch.ts.html  useTheme.ts.html  useUsers.ts.html
web/src/: App.tsx  index.css
web/src/components/auth/: PermissionGuard.tsx  ProtectedRoute.tsx
web/src/components/common/: Button.tsx  Loading.tsx
web/src/components/documents/: DocumentCard.tsx  DocumentList.tsx  DocumentUpload.tsx
web/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
web/src/components/search/: SearchBar.tsx  SearchResults.tsx
web/src/components/users/: PermissionEditor.tsx  RoleSelector.tsx  UserAvatar.tsx  UserCard.tsx  UserForm.tsx  UserList.tsx
web/src/hooks/: useAuth.ts  useDocuments.ts  usePermissions.ts  useSearch.ts  useTheme.ts  useUsers.ts
web/src/lib/: utils.test.ts  utils.ts
web/src/pages/: Collections.tsx  Dashboard.tsx  Documents.tsx  Login.tsx  Profile.tsx  Search.tsx  UserDetail.tsx  Users.tsx
web/src/services/: api.ts  chatService.ts
web/src/store/: auth.ts  chatStore.ts  index.ts
web/src/test/: setup.ts
web/src/types/: chat.ts  index.ts
web/src/utils/: cn.test.ts
(+47 files in other folders)
